--- a/css/styles.css
+++ b/css/styles.css
@@ -64,3 +64,32 @@ footer{
 	font-size: 0.8em;
     text-align: center;
 }
+
+/*------POSITIONNEMENT GRDID------*/
+
+.grid-container{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(4, 1fr);
+	gap: 15px;
+}
+
+ul{
+	list-style-type: none;
+	padding: 0;
+}
+
+.grid-container img{
+	width: 100%;
+}
+
+#mos1{
+	grid-row: 1 / 3;
+	grid-column: 1 / 3;
+}
+
+#mos6{
+	grid-row: 3 / 5;
+	grid-column: 2 / 4;
+
+}
