Intég formulaire réservation et page confirmation

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ font-family: (h1, h2,...)
 font-family: (p)
 */
 
+
+
 ul{
 	list-style-type: none;
 	padding: 0;
@@ -75,7 +77,7 @@ footer{
     text-align: center;
 }
 
-/*------POSITIONNEMENT MOSAIQUE------*/
+/*------PAGE RESTAURANT - MOSAIQUE------*/
 
 .grid-container-mos{
 	display: grid;
@@ -98,7 +100,7 @@ footer{
 	grid-column: 2 / 4;
 }
 
-/*-------POSITIONNEMENT COMMANDE---------*/
+/*-------PAGE MA COMMANDE---------*/
 
 .flex-container-com{
 	display: flex;
@@ -106,12 +108,11 @@ footer{
 	flex-direction: row;
 	justify-content: space-between;
 	border-bottom: 2px solid black;
-	width: 70%;
-
 }
 
-.flex-item{
-	box-sizing: border-box;
+.flex-btw{
+	display: flex;
+	justify-content: space-between;
 }
 
 .btn-commander{
@@ -120,27 +121,33 @@ footer{
 	padding: 0 20px;
 }
 
-.btn-panier{
+.btn{
 	padding: 12px 20px;
 	background-color:black; 
 	color: white;
+	max-width: 200px;
+	border: solid black 2px;
 }
 
-.flex-container-com ul, .flex-container-detail ul{
+.flex-container-com ul{
 	line-height: 40px;
-}
-
-.flex-container-detail{
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: space-between;
-	border-bottom: 2px solid black;
-	width: 30%;
 }
 
 .orange-background{
 	background-color: #e76836;
+}
+
+.width70{
+	width: 65%;
+}
+
+.width30{
+	width: 25%;
+	background-color: yellow;
+}
+
+.txt-right{
+	text-align: right;
 }
 
 .flex-t-shirt{
@@ -156,4 +163,77 @@ footer{
 #ma-commande{
 	padding-top: 30px;
 	padding-bottom: 30px;
+}
+
+/*-----FORMULAIRE RÉSERVATION-----*/
+
+.width50{
+	width: 45%;
+}
+
+.etiquette{
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 25px;
+	margin-top: 25px;
+}
+
+.flex-form{
+	display: flex;
+	justify-content: space-around;
+}
+
+.rouge{
+	color: red;
+}
+
+input, textarea{
+	font-size: 1.2rem;
+	color: red;
+	border: 1px solid orangered;
+}
+
+input{
+	padding: 10px 20px;
+}
+
+input:focus{
+	background-color: aqua;
+}
+#selHeure{
+	font-size: 1.2rem;
+	color: red;
+	border: 1px solid orangered;
+	padding: 10px 20px;
+}
+
+#selHeure:focus{
+	background-color: aqua;
+}
+
+label{
+	font-size: 1.2rem;
+	padding-bottom: 5px;
+}
+
+textarea{
+	min-height: 150px;
+	width: 100%;
+}
+
+.etiquette{
+	display: flex;
+	flex-direction: column;
+}
+
+fieldset{
+	margin-bottom: 30px;
+	padding: 20px;
+	border: 3px solid greenyellow;
+}
+
+fieldset legend{
+	font-size: 1.5rem;
+	margin-bottom: 25px;
+	margin-top: 25px;
 }
