--- a/css/styles.css
+++ b/css/styles.css
@@ -27,11 +27,23 @@ ul{
 	background-color:black; 
 	color: white;
 	max-width: 200px;
-	border: solid black 2px;
+	text-decoration: none;
+	font-variant: small-caps;
+}
+
+.btn:hover{
+	background-color: #e76836;
+	color: black;
+	text-decoration: underline;
 }
 
 
 /*------------HEADER--------------*/
+
+header{
+	background-color: aqua;
+}
+
 .flex-nav{
 	display: flex;
 	align-items: center;
@@ -90,7 +102,6 @@ footer{
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(4, 1fr);
-	gap: 15px;
 }
 
 .grid-container-mos img{
@@ -129,13 +140,6 @@ footer{
 	justify-content: space-between;
 	align-items: center;
 }
-
-.btn-commander{
-	background-color: black;
-	color: white;
-	padding: 12px 20px;
-}
-
 
 .flex-container-com ul{
 	line-height: 40px;
@@ -272,9 +276,48 @@ fieldset legend{
 	text-align: center;
 	padding-bottom: 50px;
 	line-height: 2rem;
+}
+
+/*----------MEDIA QUERIES---------*/
+
+
+
+@media screen and (max-width: 1200px) {
+	.grid-container-mos{
+		grid-template-columns: 1fr 1fr;
+	}
+
+	#mos1{
+		grid-row: 1 / 2;
+		grid-column: 1 / 2;
+	}
+
+	#mos6{
+		grid-column: 2 / 3;
+		grid-row: 2 / 3;
+	}
+}
+
+
+@media screen and (max-width: 960px) 
+{
+	.grid-container-mos{
+		grid-template-columns: 1fr;
+	}
+
+	#mos1{
+		grid-row: 1 / 2;
+		grid-column: 1 / 2;
+	}
+
+	#mos6{
+		grid-column: 1 / 2;
+		grid-row: 2 / 3;
+	}
 
 }
 
-.flex-menu img{
-	margin: 0.5px;
+@media screen and (min-width: 450px) and (max-width: 570px) 
+{
+	
 }
